fixing align and font-size

--- a/app/assets/stylesheets/pages/_employer_index.scss
+++ b/app/assets/stylesheets/pages/_employer_index.scss
@@ -4,6 +4,7 @@
   width: 100%;
   overflow: hidden;
   padding: 80px 0;
+
 }
 .container .main-card{
   display: flex;
@@ -29,6 +30,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .cards .card .content .img{
   height: 130px;
@@ -45,10 +48,9 @@
   border-radius: 50%;
   object-fit: cover;
 }
-.card .content .details{
+.card .content .p{
   font-size: 20px;
   font-weight: 500;
-  color: black;
 }
 .user-card-button {
   background-color: #36A9AE;
